Changes after review comments
Signed-off-by: Gearrel Welvaart <gearrel.welvaart@gmail.com>